# ChangeLog for app-cdr/eroaster
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/eroaster/Attic/ChangeLog,v 1.26 2004/06/24 21:33:32 agriffis Exp $

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> eroaster-2.0.12.ebuild:
  Add die following econf for bug 48950

*eroaster-2.2.0_pre8 (08 May 2004)

  08 May 2004; Heinrich Wendel <lanius@gentoo.org> eroaster-2.2.0_pre6.ebuild,
  eroaster-2.2.0_pre8.ebuild:
  mark pre6 stable on x86; add cdrdao to dep; add pre8

  29 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  eroaster-2.1.0-r2.ebuild, eroaster-2.2.0_pre6.ebuild:
  inherit eutils for epatch

  12 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> eroaster-2.0.12.ebuild,
  eroaster-2.1.0-r2.ebuild:
  Don't assign default to S; header fix

  24 Feb 2004; Sven Blumenstein <bazik@gentoo.org> eroaster-2.2.0_pre6.ebuild:
  Stable on sparc.

  27 Mar 2004; Heinrich Wendel <lanius@gentoo.org> eroaster-2.2.0_pre6.ebuild:
  fix about dialog (bug #44212); add support for kernel 2.6; fix to wide start window

  24 Feb 2004; Heinrich Wendel <lanius@gentoo.org> eroaster-2.2.0_pre6.ebuild:
  remove zinf dep; bug #41786

*eroaster-2.2.0_pre6 (20 Oct 2003)

*eroaster-2.2.0 (20 Oct 2003)

  20 Oct 2003; Heinrich Wendel <lanius@gentoo.org> eroaster-2.1.0-r1.ebuild,
  eroaster-2.1.0.ebuild, eroaster-2.2.0_pre6.ebuild:
  cleanups / version bump

  16 Sep 2003; Daniel Ahlberg <aliz@gentoo.org> eroaster-2.1.0-r2.ebuild :
  Change SRC_URI to use the old 2.1.0 tarball already mirrored since
  the tarball on sourceforge has changed.

*eroaster-2.1.0-r2 (02 Sep 2003)

  02 Sep 2003; Daniel Ahlberg <aliz@gentoo.org> eroaster-2.1.0-r2.ebuild :
  Security update.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*eroaster-2.1.0-r1 (03 Dec 2002)

  03 Dec 2002; Martin Schlemmer <azarah@gentoo.org> eroaster-2.1.0-r1.ebuild :