@@ -1,11 +1,9 @@
-MD5 cfdc1b5182da388c5cd8a12762fd8d8e eroaster-2.0.12.ebuild 633
 MD5 437a609d08cb1366e0860672bd6a4572 eroaster-2.1.0-r2.ebuild 1021
 MD5 21d6c45f946c4d332eabc9b1b0b2aba6 eroaster-2.2.0_pre6.ebuild 1099
-MD5 1bcfa7b94f4f82deab75b580866039ce ChangeLog 3376
+MD5 875ed79d27abd1328ef8a9646ed9af54 ChangeLog 3474
 MD5 d62eec12a834b068430e60b5578b8ed6 eroaster-2.2.0_pre8.ebuild 889
 MD5 b94ffdcec8a37e0152008bff88cb28f0 files/eroaster-2.1.0-security.patch 405
 MD5 2f4ae6982ae9ebb1c898fe405ba6c0ed files/digest-eroaster-2.2.0_pre6 70
 MD5 c01ef4cf841ac2618240ef1148f945c6 files/digest-eroaster-2.2.0_pre8 70
-MD5 0836b1f5e7d541b6162cb2044311d11a files/digest-eroaster-2.0.12 67
 MD5 4c98bd9ef237fa6547219704e5bbac91 files/eroaster-2.2.0_pre6-gentoo.patch 1493
 MD5 947336252bd87d1f2d94cca92d121e6d files/digest-eroaster-2.1.0-r2 66
